Closed Bug 835753 Opened 11 years ago Closed 11 years ago

'const' is missing in argument of IMPDManager::GetAdaptationSetType()

Categories

(Core :: Networking, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla21

People

(Reporter: tete009+bugzilla, Assigned: tete009+bugzilla)

Details

Attachments

(1 file)

Because keywords in arguments for GetAdaptationSetType() in IMPDManager and nsDASHWebMODManager classes differ, warning C4301 and error C2259 occur when compiling with MSVC8.
Attachment #707546 - Flags: review?(cpearce)
Comment on attachment 707546 [details] [diff] [review]
Add 'const' to argument of IMPDManager::GetAdaptationSetType()

Review of attachment 707546 [details] [diff] [review]:
-----------------------------------------------------------------

I think Steve Workman is the most qualified person to review all code changes to DASH code, except his own changes of course. He has the best understanding of it since he wrote it, so passing review onto him.
Attachment #707546 - Flags: review?(cpearce) → review?(sworkman)
Comment on attachment 707546 [details] [diff] [review]
Add 'const' to argument of IMPDManager::GetAdaptationSetType()

Review of attachment 707546 [details] [diff] [review]:
-----------------------------------------------------------------

Thanks, Chris. Looks good. r=me.
Attachment #707546 - Flags: review?(sworkman) → review+
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/9b4182f33b7f
Status: UNCONFIRMED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla21
Thank you both.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: