Bug 835753 - Add 'const' to argument of IMPDManager::GetAdaptationSetType(). r=sworkman